--- a/src/main/resources/static/DiseaseDescriptionPage.html
+++ b/src/main/resources/static/DiseaseDescriptionPage.html
@@ -196,6 +196,35 @@
     display: block;
     }
 
+    #spanAthor{
+        font-family: "Amiko", sans-serif;
+        color:red;
+    }
+
+    #spanAthor:hover{
+        color:black;
+        transition: color 1s;
+    }
+    #spanAthor:before{
+        content:"";
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: #000;
+        visibility: hidden;
+        -webkit-transform: scaleX(0);
+        transform: scaleX(0);
+        -webkit-transition: all 0.3s ease-in-out 0s;
+        transition: all 0.3s ease-in-out 0s;
+    }
+    #spanAthor:hover:before{
+        visibility: visible;
+        -webkit-transform: scaleX(1);
+        transform: scaleX(1);
+    }
+
 </style>
 
 <body style="background-color:lightcyan">
@@ -609,4 +638,10 @@ $(document).ready(function(){
     });
 });
 </script>
+<style>
+    #spanAthor{
+        font-family: "Amiko", sans-serif;
+        color:red;
+    }
+</style>
 </html>
