--- a/src/main/resources/static/DiseaseDescriptionPage.html
+++ b/src/main/resources/static/DiseaseDescriptionPage.html
@@ -174,6 +174,38 @@
     -webkit-transform: scaleX(1);
     transform: scaleX(1);
     }
+
+    h5 span {
+    cursor:pointer;
+    position: relative;
+    }
+
+    h5 span:hover{
+    color:black;
+    transition: color 1s;
+    }
+
+    h5 span:before{
+    content:"";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #888;
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s;
+    }
+
+    h5 span:hover:before{
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+    }
+
     #back-top {
     position: fixed;
     display:none;
