--- a/src/main/resources/static/DiseaseDescriptionPage.html
+++ b/src/main/resources/static/DiseaseDescriptionPage.html
@@ -16,17 +16,26 @@
     height: 100%;
     }
     .close {
-    color: black;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+        background-color: lightcyan;
+        padding:1px;
+        margin:0;
+        width: 2.5%;
+        color: black;
+        float: right;
+        font-size: 18px;
+        font-weight: bold;
     }
+
     .close:hover,
     .close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
+        background-color: red
+    ;
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
+        transition: background-color 0.5s;
     }
+
     .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
@@ -174,38 +183,6 @@
     -webkit-transform: scaleX(1);
     transform: scaleX(1);
     }
-
-    h5 span {
-    cursor:pointer;
-    position: relative;
-    }
-
-    h5 span:hover{
-    color:black;
-    transition: color 1s;
-    }
-
-    h5 span:before{
-    content:"";
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: #888;
-    visibility: hidden;
-    -webkit-transform: scaleX(0);
-    transform: scaleX(0);
-    -webkit-transition: all 0.3s ease-in-out 0s;
-    transition: all 0.3s ease-in-out 0s;
-    }
-
-    h5 span:hover:before{
-    visibility: visible;
-    -webkit-transform: scaleX(1);
-    transform: scaleX(1);
-    }
-
     #back-top {
     position: fixed;
     display:none;
@@ -263,6 +240,27 @@
         transform: scaleX(1);
     }
 
+    .close {
+        background-color: lightcyan;
+        padding:1px;
+        margin:0;
+        width: 2.5%;
+        color: black;
+        float: right;
+        font-size: 18px;
+        font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+        background-color: red
+    ;
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
+        transition: background-color 0.5s;
+    }
+
 </style>
 
 <body style="background-color:lightcyan">
@@ -305,7 +303,7 @@
 <div class="modal" id="my-modify-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-content" style="width: 800px;height:auto;margin-left: auto;margin-right: auto;margin-top: 120px;">
         <div class="modal-body">
-            <span id="closebtn" class="close">CLOSE</span>
+            <button type="button" class="close" aria-label="Close" id = "closebtn"><span aria-hidden="true">&times;</span></button>
             <div class="clearfix"></div>
             <div  class="modify-content">
                 <h2 id="titleH2" style="text-align: center;"></h2>
@@ -321,8 +319,7 @@
 <div class="modal" id="my-modify-modal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-content" style="width: 300px;height:auto;margin-left: 800px;margin-right: auto;margin-top: 150px;">
         <div class="modal-body">
-            <span id="closebtn2" class="close">CLOSE</span>
-            <div class="clearfix"></div>
+            <button type="button" class="close" aria-label="Close" id = "closebtn2"><span aria-hidden="true">&times;</span></button>            <div class="clearfix"></div>
             <div  class="modify-content">
                 <ol id="favArticles" style="color:#777; text-align: left; font-size:16px"></ol>
             </div>
