--- a/src/main/resources/static/createTextPage.html
+++ b/src/main/resources/static/createTextPage.html
@@ -79,17 +79,24 @@
 
     /* The Close Button */
     .close {
-    color: black;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+        background-color: lightcyan;
+        padding:1px;
+        margin:0;
+        width: 3%;
+        color: black;
+        float: right;
+        font-size: 18px;
+        font-weight: bold;
     }
 
     .close:hover,
     .close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
+        background-color: red
+    ;
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
+        transition: background-color 0.5s;
     }
 
     body {
@@ -308,7 +315,7 @@
     <div id="myModal" class="modal">
         <!-- Modal content -->
         <div class="modal-content">
-            <span class="close">CLOSE</span>
+            <button type="button" class="close" aria-label="Close" id = "closebtn"><span aria-hidden="true">&times;</span></button>
             <div class="input-group" style="margin-bottom: 5px;">
                 <span class="input-group-addon">Symptom Name</span>
                 <input type="text" class="form-control" id="newSymName" placeholder="Please give the symptom a name">
