--- a/src/main/resources/static/departmentPage.html
+++ b/src/main/resources/static/departmentPage.html
@@ -310,7 +310,7 @@
         <div id="myModal2" class="modal">
             <!-- Modal content -->
             <div class="modal-content">
-                <span class="close">CLOSE</span>
+                <button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h1 style="border-bottom: 4px solid #e3ae24">POSSIBLE DISEASE</h1>
                 <ul id="diseaseList" class="grids" style="margin-left: 5px">
 
