--- a/src/main/resources/static/DiseaseDescriptionPage.html
+++ b/src/main/resources/static/DiseaseDescriptionPage.html
@@ -292,7 +292,7 @@
                 <div id="textArea" style="text-align: left;"></div>
                 <p id="mtgh"></p>
                 <button class="upperbtn" type="button" id="favouriteBtn" onclick="favourite()">
-                    <span class="glyphicon glyphicon-star"></span> favourite
+                    <span class="glyphicon glyphicon-star" id="favouriteSpan"></span> favourite
                 </button>
             </div>
 
@@ -499,6 +499,8 @@ $(document).ready(function(){
                     userObj.username = username;
                     var artId = $(this).attr('articleid');
                     artObj.articleId = artId;
+                    artObj.user = userObj;
+                    console.log(artObj);
                     $(function(callback) {
                         $.ajax({
                             url: '/ifFavourite',
@@ -515,6 +517,10 @@ $(document).ready(function(){
                             }
                         }).done(function(result) {
                             console.log(result);
+                            if (result == 0) {
+                                var favSpan = document.getElementById("favouriteSpan");
+                                favSpan.setAttribute("class", "glyphicon glyphicon-star-empty");
+                            }
                         });
                     });
 
@@ -739,7 +745,14 @@ $(document).ready(function(){
                 }
             }).done(function(result) {
                 console.log(result);
-
+                var favSpan = document.getElementById("favouriteSpan");
+                if (result == 1) {
+                    favSpan.setAttribute("class", "glyphicon glyphicon-star");
+                    alert("Your have added this article to your favourite list.");
+                } else if (result == -1) {
+                    favSpan.setAttribute("class", "glyphicon glyphicon-star-empty");
+                    alert("You have removed this article from your favourite list.");
+                }
             });
         });
     }
