--- a/src/main/resources/static/userPage.html
+++ b/src/main/resources/static/userPage.html
@@ -461,7 +461,7 @@
     <div class="modal" id="my-modify-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-content" style="width: 800px;height:auto;margin-left: auto;margin-right: auto;margin-top: 120px;">
             <div class="modal-body">
-                <button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>                <div class="clearfix"></div>
+                <button type="button" class="close" aria-label="Close" id = "closebtn"><span aria-hidden="true">&times;</span></button>                <div class="clearfix"></div>
                 <div  class="modify-content">
                     <h2 id="titleH2" style="text-align: center;"></h2>
                     <h5 id="authorH3" style="text-align: center;"></h5>
