--- a/src/main/resources/static/DiseaseDescriptionPage.html
+++ b/src/main/resources/static/DiseaseDescriptionPage.html
@@ -241,6 +241,16 @@
     }
 
 
+
+    #share-buttons img {
+        width: 35px;
+        padding: 5px;
+        border: 0;
+        box-shadow: 0;
+        display: inline;
+    }
+
+
 </style>
 
 <body style="background-color:lightcyan">
@@ -304,7 +314,8 @@
 <div class="modal" id="my-modify-modal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-content" style="width: 300px;height:auto;margin-left: 800px;margin-right: auto;margin-top: 150px;">
         <div class="modal-body">
-            <button type="button" class="close" aria-label="Close" id = "closebtn2"><span aria-hidden="true">&times;</span></button>            <div class="clearfix"></div>
+            <button type="button" class="close" aria-label="Close" id = "closebtn2"><span aria-hidden="true">&times;</span></button>
+            <div class="clearfix"></div>
             <div  class="modify-content">
                 <ol id="favArticles" style="color:#777; text-align: left; font-size:16px"></ol>
             </div>
@@ -316,6 +327,12 @@
 
 <div class="footer">
     <a href="#top" id="back-top"><span class="glyphicon glyphicon-eject"></span></a>
+
+    <a href="https://twitter.com/share?url&amp;text=from%20@webdoctor
+    &amp;" target="_blank">
+        <img src="https://simplesharebuttons.com/images/somacro/twitter.png" alt="Twitter" />
+    </a>
+
 </div>
 </body>
 
