login as guest added

--- a/src/main/resources/static/DiseaseDescriptionPage.html
+++ b/src/main/resources/static/DiseaseDescriptionPage.html
@@ -328,7 +328,7 @@
 <div class="footer">
     <a href="#top" id="back-top"><span class="glyphicon glyphicon-eject"></span></a>
 
-    <a href="https://twitter.com/share?url&amp;text=from%20@webdoctor
+    <a href="https://twitter.com/share?url&amp;text=from%20@WebDoctor%20welcome%20to%20WebDoctor!%20localhost:8080
     &amp;" target="_blank">
         <img src="https://simplesharebuttons.com/images/somacro/twitter.png" alt="Twitter" />
     </a>
