--- a/src/main/resources/static/DiseaseDescriptionPage.html
+++ b/src/main/resources/static/DiseaseDescriptionPage.html
@@ -98,7 +98,7 @@
     .footer {
     position:fixed;
     bottom:0;
-    left:33cm;
+    right:0;
     }
     .upperbtn{
     background-color: #4DB6AC;
@@ -188,8 +188,8 @@
     display:none;
     font-size: 50px;
     color: rgba(0,0,0,0.5);
-    bottom: 5px;
-    right:30px;
+    bottom: 12%;
+    right:10%;
     width:auto;
     }
     a#back-top:active {
@@ -242,8 +242,9 @@
 
 
 
-    #share-buttons img {
-        width: 35px;
+    .share-buttons {
+
+        width: 20px;
         padding: 5px;
         border: 0;
         box-shadow: 0;
@@ -327,11 +328,15 @@
 
 <div class="footer">
     <a href="#top" id="back-top"><span class="glyphicon glyphicon-eject"></span></a>
-
+    
     <a href="https://twitter.com/share?url&amp;text=from%20@WebDoctor%20welcome%20to%20WebDoctor!%20localhost:8080
-    &amp;" target="_blank">
+    &amp;" target="_blank" class = "share-button">
         <img src="https://simplesharebuttons.com/images/somacro/twitter.png" alt="Twitter" />
     </a>
+
+    <!--<a href="https://plus.google.com/share?url" target="_blank" class = "share-button">-->
+        <!--<img src="https://simplesharebuttons.com/images/somacro/google.png" alt="Google" />-->
+    <!--</a>-->
 
 </div>
 </body>
