--- a/src/main/resources/static/searchPage.html
+++ b/src/main/resources/static/searchPage.html
@@ -26,31 +26,43 @@
 
     /*  Content */
     .modal-content {
-    background-color: #1aa8b9;
-    margin: auto;
-    padding: 20px;
-    padding-bottom: 10%;
-    border: 1px solid #888;
-    width: 80%;
-    height: auto;
+        background-color: lightcyan;
+        margin: auto;
+        padding: 20px;
+        padding-bottom: 10%;
+        width: 80%;
+        height: auto;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+        -webkit-animation-name: fadeIn;
+        -webkit-animation-duration: 0.6s;
+        animation-name: fadeIn;
+        animation-duration: 0.6s
 
     }
 
 
     /* The Close Button */
     .close {
-    color: black;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+        background-color: lightcyan;
+        padding:1px;
+        margin:0;
+        width: 2.5%;
+        color: black;
+        float: right;
+        font-size: 18px;
+        font-weight: bold;
     }
 
     .close:hover,
     .close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
+        background-color: red
+    ;
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
+        transition: background-color 0.5s;
     }
+
 
     body {
     background-color: lightcyan;
@@ -67,10 +79,10 @@
     }
 
 
-    button:hover{
-    color: #CFD8DC;
-    transition: text-shadow 1s,color 1s;
-
+    button:hover:not(#drop):not(#search) {
+        color: #CFD8DC;
+        box-shadow: 0 4px 6px 0 rgba(0,0,0,0.24), 0 8px 20px 0 rgba(0,0,0,0.19);
+        transition: box-shadow 1s,text-shadow 1s,color 1s;
     }
 
     .upperbtn {
@@ -101,36 +113,53 @@
     float: right;
     }
 
-    .grids ul {
-    font-family: "Open Sans";
-    font-weight: 20;
-    font-size: 14px;
-    list-style-type: none;
-    display: inline-block;
-    }
-
-    #diseaseList li {
-    display: inline-block;
-    }
-
-    #diseaseList li button {
-    background-color: #4DB6AC;
-    color: white;
-    border: 1px groove #cccccc;
-    border-radius: 4px;
-    cursor: pointer;
-    width: 150px;
-    height: 150px;
-    }
-
-    #diseaseList li button:hover{
-    color: #CFD8DC;
-    transition: text-shadow 1s,color 1s;
-    }
 
     .grids {
         height:100px;
         margin-left:200px;
+        margin-top: 6%;
+    }
+
+    .grids ul {
+        font-family:"Open Sans",serif;
+        font-weight: normal;
+        font-size: 22px;
+        list-style-type: none;
+        display: inline-block;
+    }
+
+    li {
+        text-align: -webkit-match-parent;
+        display: inline-block;
+    }
+
+    li button {
+        border-radius:3px;
+        font-family: Arial,serif;
+        border:none;
+        font-size: 15px;
+        background-color: #4DB6AC;
+        color: white;
+        padding: 14px 20px;
+        margin: 8px 0;
+        cursor: pointer;
+        width: 150px;
+        height: 150px;
+    }
+
+    li button:hover{
+
+        transition: text-shadow 1s,color 1s;
+
+    }
+    @-webkit-keyframes fadeIn {
+        from {opacity: 0}
+        to {opacity: 1}
+    }
+
+    @keyframes fadeIn {
+        from {opacity: 0}
+        to {opacity: 1}
     }
 
 </style>
@@ -159,7 +188,7 @@
             <div class="col-xs-8 col-xs-offset-2">
                 <div class="input-group">
                     <div class="input-group-btn search-panel">
-                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" id ='drop'>
                             <span id="search_concept">Filter by</span> <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu" id="menu" role="menu">
@@ -179,7 +208,7 @@
                     <input type="hidden" name="search_param" value="all" id="search_param">
                     <input type="text" id="searchBox" class="form-control" name="x" placeholder="Search term...">
                 <span class="input-group-btn">
-                    <button class="btn btn-default" type="button" onclick="search()"><span class="glyphicon glyphicon-search"></span></button>
+                    <button class="btn btn-default" type="button" onclick="search()" id = "search"><span class="glyphicon glyphicon-search"></span></button>
                 </span>
                 </div>
             </div>
@@ -191,8 +220,8 @@
     <div id="myModal" class="modal">
         <!-- Modal content -->
         <div class="modal-content">
-            <span class="close">CLOSE</span>
-            <h1 style="border-bottom: 4px solid #e3ae24">POSSIBLE DISEASE</h1>
+            <button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h1 style="border-bottom: 4px solid #e3ae24; color:#777">POSSIBLE DISEASE</h1>
             <ul id="diseaseList" class="grids" style="margin-left: 5px">
 
             </ul>
