--- a/src/main/resources/static/departmentPage.html
+++ b/src/main/resources/static/departmentPage.html
@@ -177,7 +177,16 @@
 
     }
 
+    ul button {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
 
+    ul button:hover {
+        text-overflow: inherit;
+        overflow: display;
+    }
 
 
     #selectedTags li {
